# Advent-Of-Code-Python-Environment

./: .env  .gitignore  pyproject.toml  requirements.txt  requirements_dev.txt
AOC_scripts/helpers/: grid.py
AOC_scripts/tests/year_2023/: test_day_01_2023.py  test_day_02_2023.py  test_day_03_2023.py  test_day_04_2023.py  test_day_05_2023.py  test_day_06_2023.py  test_day_07_2023.py  test_day_08_2023.py  test_day_09_2023.py  test_day_10_2023.py  test_day_11_2023.py  test_day_12_2023.py  test_day_13_2023.py  test_day_15_2023.py  test_day_16_2023.py  test_day_17_2023.py  test_day_25_2023.py
AOC_scripts/tests/year_2024/: test_day_01_2024.py  test_day_02_2024.py  test_day_03_2024.py  test_day_04_2024.py  test_day_05_2024.py  test_day_06_2024.py  test_day_07_2024.py
AOC_scripts/year_2023/: day_01_2023.py  day_02_2023.py  day_03_2023.py  day_04_2023.py  day_05_2023.py  day_06_2023.py  day_07_2023.py  day_08_2023.py  day_09_2023.py  day_10_2023.py  day_11_2023.py  day_12_2023.py  day_13_2023.py  day_15_2023.py  day_16_2023.py  day_17_2023.py  day_25_2023.py
AOC_scripts/year_2024/: day_01_2024.py  day_02_2024.py  day_03_2024.py  day_04_2024.py  day_05_2024.py  day_06_2024.py  day_07_2024.py
src/: config.py
src/adventofcode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/scripts/: add_day.py  get_inputs.py
src/scripts/templates/: day_template.txt  networkx_template.py  test_template.txt
src/util/: helpers.py  input_helpers.py
